k8s/imaweb-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imaweb-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: imaweb
  template:
    metadata:
      labels:
        app: imaweb
    spec:
      containers:
        - name: imaweb
          image: bnk23cusacr.azurecr.io/imaweb:latest
          ports:
            - containerPort: 80
          resources:
            limits: 
              cpu: 500m
              memory: 128Mi
