k8s/imaapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: imaapi-service
spec:
  selector:
    app: imaapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
