k8s/imaweb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: imaweb-service
spec:
  selector:
    app: imaweb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
